welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return false
  ^SnakeBuggle:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (getDirection()==Direction.EST){
  ^SnakeBuggle:23: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (getDirection()==Direction.OUEST){
  ^SnakeBuggle:32: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return true
  ^